--- a/index.html
+++ b/index.html
@@ -8,40 +8,47 @@
 	<link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
+<h1>It's My Slider!!!</h1>
 <div class="slider-wrap">
 	<div class="slider">
-		<a href="#" class="btn-prev">prev</a>
-		<a href="#" class="btn-next">next</a>
+		<a href="#" class="btn-prev"></a>
+		<a href="#" class="btn-next"></a>
 		<div class="slider-container">
 			<div class="slides">
-				<div class="slide slide1 active">
+				<div class="slide active">
+					<img src="img/Ahri.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Ahri</span>
 					</div>
 				</div>
-				<div class="slide slide2">
+				<div class="slide">
+					<img src="img/Jinx.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Jinx</span>
 					</div>
 				</div>
-				<div class="slide slide3">
+				<div class="slide">
+					<img src="img/Riven.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Riven</span>
 					</div>
 				</div>
-				<div class="slide slide4">
+				<div class="slide">
+					<img src="img/Leblanc.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Leblanc</span>
 					</div>
 				</div>
-				<div class="slide slide5">
+				<div class="slide">
+					<img src="img/akaly.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Akaly</span>
 					</div>
 				</div>
-				<div class="slide slide6">
+				<div class="slide">
+					<img src="img/Caitlyn.jpg" alt="">
 					<div class="animate">
-						up
+						<span>Champion Caitlyn</span>
 					</div>
 				</div>
 			</div>
@@ -56,6 +63,54 @@
 		</ul>
 	</div>
 </div>
+<div class="slider-wrap slider-wrap2">
+	<div class="slider2">
+		<a href="#" class="btn-prev"></a>
+		<a href="#" class="btn-next"></a>
+		<div class="slider-container">
+			<div class="slides">
+				<div class="slide active">
+					<img src="img/ShenZhen.jpg" alt="">
+					<div class="animate">
+						<span>ShenZhen City</span>
+					</div>
+				</div>
+				<div class="slide">
+					<img src="img/Beijing.jpg" alt="">
+					<div class="animate">
+						<span>Beijing City</span>
+					</div>
+				</div>
+				<div class="slide">
+					<img src="img/Shanghai.jpg" alt="">
+					<div class="animate">
+						<span>Shanghai City</span>
+					</div>
+				</div>
+				<div class="slide">
+					<img src="img/Tianjin.jpg" alt="">
+					<div class="animate">
+						<span>Tianjin City</span>
+					</div>
+				</div>
+				<div class="slide">
+					<img src="img/Suzhou.jpg" alt="">
+					<div class="animate">
+						<span>Suzhou City</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<ul class="pagination">
+			<li class="active"></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="js/mySlider.js"></script>
 <script>
