--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</ul>
 	</div>
 </div>
-<div class="slider-wrap slider-wrap2">
+<div class="slider-wrap">
 	<div class="slider2">
 		<a href="#" class="btn-prev"></a>
 		<a href="#" class="btn-next"></a>
@@ -120,8 +120,7 @@ $(document).ready(function(){
 		sliderName: '.slider2',
 		auto: false
 	});
-});
-	
+});	
 
 </script>
 </body>
