--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 </div>
 <div class="slider-wrap">
 	<div class="slider slider-small">
-	<div class="slider-inner">
-			<div class="slide active">
+		<div class="slider-inner">
+			<div class="slide">
 				<img src="img/ShenZhen.jpg" alt="">
 				<div class="animate">
 					<span>ShenZhen City</span>
@@ -89,12 +89,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="range-slider">
+	<div class="range-slider range-slider1">
 		<div class="range-track"></div>
 		<div class="range-drag"></div>
 	</div>
 </div>
 <script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
+<script>
+$('.slider-wrap').rangePlugin();
+</script>
 </body>
 </html>
